--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,15 @@ jobs:
     steps:
       - name: Chakout Repo
         uses: actions/checkout@v3 
-      - name: Srtup Python 
+      - name: Setup Python 
         uses: actions/setup-python@v4
-     
-      
-       
+        with:
+          python-version: '3.10'
+      - name: Install Dependencies
+        run:
+          python -m pip install --upgrade pip
+          pip install pyyaml
+         
       - name: Run Feed Generator 
         run: Rn Feed Generator 
       - name: Push Repo
