--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,14 @@ jobs:
         with:
           python-version: '3.12'
       - name: Install Dependencies
-        run:
+        run:  |
           
           pip install pyyaml
          
       - name: Run Feed Generator 
-        run: Rn Feed Generator 
+        run: python feed.py
       - name: Push Repo
-        run:
+        run:  |
           git config username github-actions 
           git config user.email github-actions@github.com 
           git add .
