--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         run: python feed.py
       - name: Push Repo
         run:  |
-          git config username github-actions 
+          git config user.name github-actions 
           git config user.email github-actions@github.com 
           git add .
           git commit -m "moddified Feed"
