--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,22 +6,7 @@ jobs:
     steps:
       - name: Chakout Repo
         uses: actions/checkout@v3 
+      - name: Run Feed Generator 
+        uses: planetoftheweb/podcast-generator@main
       - name: Setup Python 
         uses: actions/setup-python@v3
-        with:
-          python-version: '3.12'
-      - name: Install Dependencies
-        run:  |
-          
-          pip install pyyaml
-         
-      - name: Run Feed Generator 
-        run: python feed.py
-      - name: Push Repo
-        run:  |
-          git config user.name github-actions 
-          git config user.email github-actions@github.com 
-          git add .
-          git commit -m "moddified Feed"
-          git push
-          
