--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Chakout Repo
+      - name: Checkout Repo
         uses: actions/checkout@v3 
       - name: Run Feed Generator 
         uses: planetoftheweb/podcast-generator@main
-      - name: Setup Python 
-        uses: actions/setup-python@v3
